<resources>
    <string name="google_maps_api_key" translatable="false">AIzaSyCl9ZlsJDdsNnK6X7_SqQyJCO9USoxm6JI</string>
    <string name="app_name">Coming</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_search">Search</string>
    <string name="hint_type_store_name">Type store name</string>
    <string name="hint_order_detail">Size, color, quantity ..etc</string>
    <string name="hint_type_promo_code">Enter promo code</string>
    <string name="hint_note">Type your special order..</string>
    <string name="hint_instructions">Type your delivery instructions..</string>
    <string name="hint_address">Type your address..</string>
    <string name="hint_phone_number">+966 920 003 777</string>
    <string name="hint_name">Name</string>
    <string name="dummy_hint_name">John Doe</string>
    <string name="dummy_hint_email">JohnDoe@gmail.com</string>
    <string name="hint_card_number">**** **** **** 1234</string>
    <string name="hint_expiry">09/24</string>
    <string name="hint_cvv">* * *</string>
    <string name="hint_enter_amount">Enter amount</string>
    <string name="hint_message">Message...</string>
    <string name="text_skip">Skip</string>
    <string name="text_verification">Verification</string>
    <string name="text_verify_desc">You’ll shortly receive a message with a code\nto verify your mobile number</string>
    <string name="text_verify">Verify</string>
    <string name="text_pick_your_location">Pick your location</string>
    <string name="text_pick">Pick</string>
    <string name="text_store_name">Store Name</string>
    <string name="text_order_details">Order details</string>
    <string name="text_pick_store_location">Pick store location</string>
    <string name="text_price_50">SAR50</string>
    <string name="text_price_100">SAR100</string>
    <string name="text_price_300">SAR300</string>
    <string name="text_price_500">SAR500</string>
    <string name="text_size">Size</string>
    <string name="text_extras">Extras</string>
    <string name="text_up_to_optional">Optional Up to </string>
    <string name="text_up_to_mandatory">Mandatory Up to </string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_back">Back</string>
    <string name="text_total">Total</string>
    <string name="text_tax">VAT</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_promo_code">Promo Code</string>
    <string name="text_note">Note</string>
    <string name="text_delivery_details">Delivery Details</string>
    <string name="text_place_order">Place order</string>
    <string name="text_choose_method">Choose Method</string>
    <string name="text_payment_method">Payment method</string>
    <string name="text_delivery_instructions">Delivery instructions</string>
    <string name="text_address">Address</string>
    <string name="text_help">Help</string>
    <string name="text_wait">Please wait for order confirmation</string>
    <string name="text_order_received">Order Received</string>
    <string name="text_order_preparation">Order Preparation</string>
    <string name="text_order_on_the_way">Order On The Way</string>
    <string name="text_track_order">Track order</string>
    <string name="text_driver">Driver</string>
    <string name="text_delivery_time">Delivery time</string>
    <string name="text_how_was_your_last_order">How was your last order?</string>
    <string name="text_store">Store</string>
    <string name="text_great">Great\u0020</string>
    <string name="text_good">Good\u0020</string>
    <string name="text_okay">Okay\u0020</string>
    <string name="text_bad">Bad\u0020</string>
    <string name="text_terrible">Terrible\u0020</string>
    <string name="text_done">Done</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_email_address">Email address</string>
    <string name="text_credit_cards">Credit cards</string>
    <string name="text_account_credits">Account credits</string>
    <string name="text_asterisks">****</string>
    <string name="text_card_holder">CARD HOLDER</string>
    <string name="text_expires">EXPIRES</string>
    <string name="text_remove_this_card">Remove this card</string>
    <string name="text_add_new_card">+ Add new card</string>
    <string name="text_card_holder_small">Card holder</string>
    <string name="text_card_number">Card number</string>
    <string name="text_expiry_date">Expiry date</string>
    <string name="text_cvv">CVV</string>
    <string name="text_save">Save</string>
    <string name="text_add_card_success">Your card has been successfully added.</string>
    <string name="text_current_balance">Current balance</string>
    <string name="text_recharge">Recharge</string>
    <string name="text_transaction_history">Transaction history</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_mada_card">MADA Card</string>
    <string name="text_stc_pay">STC Pay</string>
    <string name="text_cash">Cash</string>
    <string name="text_redeem_voucher">Redeem voucher</string>
    <string name="text_code">Code</string>
    <string name="text_redeem">Redeem</string>
    <string name="text_vouchers">Vouchers</string>
    <string name="text_voucher_info_1">Vouchers are applied to the next\norder automatically.</string>
    <string name="text_voucher_info_2">Only one voucher can be applied per order.</string>
    <string name="text_voucher_info_3">Most vouchers have an expiry date.</string>
    <string name="text_referral_info">Share your code with your friends and you will get SAR 10 and they’ll get SAR 20 in your wallet within 8 hours after their first order.</string>
    <string name="text_share_code">Share code</string>
    <string name="text_live_chat">Live chat</string>
    <string name="text_call_center">Call center</string>
    <string name="text_my_tickets">My tickets</string>
    <string name="text_notifs">Notifications</string>
    <string name="text_language">Language</string>
    <string name="text_english_uk">English UK</string>
    <string name="text_arabic">ةيبرعلا</string>
    <string name="text_current">Current</string>
    <string name="text_previous">Previous</string>
    <string name="text_on_the_way">On the Way</string>
    <string name="text_away">Away</string>
    <string name="text_cost">Cost</string>
    <string name="text_arrival_time">Arrival time</string>
    <string name="text_accept">Accept</string>
    <string name="text_reject">Reject</string>
    <string name="text_orders">Orders</string>
    <string name="text_driver_chat">Driver chat</string>
    <string name="text_discount">Discount</string>
    <string name="text_paid_with">Paid with</string>
    <string name="text_select_code">Select country code</string>
    <string name="text_search_here">Search here</string>
    <string name="text_clear_code">Clear Code</string>
    <string name="text_recharge_success">Your card has been successfully recharged for</string>
    <string name="text_voucher_success">Voucher will apply automatically to your next order.</string>
    <string name="text_got_it">Got it</string>
    <string name="text_kfc_super_bucket">KFC Super Bucket</string>
    <string name="text_all_offers">All Offers</string>
    <string name="text_greeting">Welcome</string>
    <string name="text_greeting_guest">Welcome Guest</string>
    <string name="text_contact_driver">Contact Driver</string>
    <string name="text_pay">Pay</string>
    <string name="text_call">Call</string>
    <string name="text_chat">Chat</string>
    <string name="text_choose_option">Choose option</string>
    <string name="text_close">Close</string>
    <string name="text_info_logout">Are sure you want to logout?</string>
    <string name="title_menu">Menu</string>
    <string name="title_offers">Offers</string>
    <string name="title_orders">Orders</string>
    <string name="title_home">Home</string>
    <string name="title_ref_code">Referral code</string>
    <string name="title_payment_methods">Payment Methods</string>
    <string name="title_live_chat">Live Chat</string>
    <string name="title_all_offers">All Offers</string>
    <string name="menu_referral_code">Referral Code</string>
    <string name="menu_account">Account</string>
    <string name="menu_payment_options">Payment options</string>
    <string name="menu_invoices">Invoices</string>
    <string name="menu_customer_service">Customer Service</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="validations_please_enter_message">Please enter message</string>
    <string name="validations_please_enter_mobile_number">The Phone number  is a required field</string>
    <string name="validations_please_enter_valid_mobile_number">The Phone number field isn\'t valid</string>
    <string name="validations_please_enter_name">The Full name is a required field</string>
    <string name="validations_please_enter_email_address">The Email  is a required field</string>
    <string name="validations_please_enter_valid_email_address">The Email field isn\'t valid</string>
    <string name="validations_please_enter_card_holder_name">Please enter card holder name</string>
    <string name="validations_please_enter_card_number">Please enter card number</string>
    <string name="validations_please_enter_valid_card_number">Please enter valid card number</string>
    <string name="validations_please_enter_expiry_date">Please enter expiry date</string>
    <string name="validations_please_enter_CVV">Please enter CVV</string>
    <string name="validations_please_enter_valid_CVV">Please enter valid CVV</string>
    <string name="validations_please_enter_recharge_amount">Please enter recharge amount</string>
    <string name="validations_please_enter_voucher_code">Please enter voucher code</string>
    <string name="validations_mandatory_choices">Please check your mandatory choices</string>
    <string name="validations_please_enter_promocode">Please enter promocode</string>
    <string name="validations_please_enter_address">Please enter address</string>
    <string name="validations_please_enter_store_name">Please enter store name</string>
    <string name="validations_please_enter_order_details">Please enter order details</string>
    <string name="validations_please_select_store_location">Please select store location</string>
    <string name="connection_exception">OOPS! NO INTERNET. Please check your network connection. Try Again</string>
    <string name="socket_time_out_exception">Connection time out</string>
    <string name="authentication_required_please_login">Authentication required please login</string>
    <string name="label_we_need_location_permission_for_get_nearest_store">We need access location permission for find nearest store</string>
    <string name="label_personal_shopper">Personal Shopper</string>
    <string name="label_order">Order</string>
    <string name="label_calories">Calories</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_currency">SAR</string>
    <string name="label_current_balance">Current Balance :</string>
    <string name="label_currency_minus">-SAR</string>
    <string name="label_sr">SAR</string>
    <string name="label_order_id">Order :</string>
    <string name="label_km">Km</string>
    <string name="label_ok">OK</string>
    <string name="label_sar">SAR</string>
    <string name="dummy_name">Ahmed Ibrahim</string>
    <string name="dummy_card_no">1234</string>
    <string name="dummy_name_2">John Doe</string>
    <string name="text_delivery_address">Delivery Address</string>
    <string name="hint_type_delivery_address">Type Delivery Address</string>
</resources>