<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelPhone"
        style="@style/BaseTextView.Title.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/text_phone_number"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPhoneNumber"
        style="@style/BaseEditTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:clickable="false"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/hint_phone_number"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:longClickable="false"
        android:maxLength="15"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewLabelPhone"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelPhone"
        tools:text="@string/hint_phone_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelName"
        style="@style/BaseTextView.Title.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/hint_name"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber" />
    <!--        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextName"
        style="@style/BaseEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:hint="@string/dummy_hint_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewLabelName"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelName"
        tools:text="@string/dummy_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelEmail"
        style="@style/BaseTextView.Title.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/text_email_address"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        style="@style/BaseEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:hint="@string/dummy_hint_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewLabelEmail"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelEmail"
        tools:text="@string/dummy_hint_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        style="@style/BaseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_64dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/text_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>