<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_black" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_help" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelRedeem"
        style="@style/BaseTextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_redeem_voucher"
        app:layout_constraintBottom_toBottomOf="@id/imageViewBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageViewBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelCode"
        style="@style/BaseTextView.Title.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_64dp"
        android:text="@string/text_code"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewBack" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextCode"
        style="@style/BaseEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:hint="@string/dummy_card_no"
        android:inputType="number"
        android:maxLength="15"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewLabelCode"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelCode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRedeem"
        style="@style/BaseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/text_redeem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCode"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>